test/asm/garbage_sequence.asm
assert 1 +# 1 == 2
assert 2 '?* 2 == 4
assert 3 **?''?##?? 3 == 27
